src/test/deca/context/valid/created/op-vars.deca
//Description :
// Test d'une opération entre 2 variables
//
// Resultats :
// 


{
    int x = 2;
    int y = 3;

    x + y;
}
