src/test/deca/context/invalid/created/double-affect-inits-inv.deca
//Description :
// Test d'une double affectation sans init puis avec
//
// Resultats :
// Erreur

{
    int x = 2 ;
    int x ;
}
